{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 47,
  "lineage": "9d39374a-37b4-89b7-7a5b-c4f8936cb8d2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183504198547:vpc/vpc-0305922eaaf698e8a",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-065c7e51636901190",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0d43a077a0a9bfb5d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0305922eaaf698e8a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08636fc03ba6e4fca",
            "owner_id": "183504198547",
            "state": "available",
            "tags": {
              "Name": "useast1d_vpc",
              "app_role": "vpc",
              "environment": "development",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "web_hosting"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183504198547:security-group/sg-02c5dc61d603adeda",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c5dc61d603adeda",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "useast1d_wordpress_alb_20201115043814866500000004",
            "name_prefix": "useast1d_wordpress_alb_",
            "owner_id": "183504198547",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "useast1d_wordpress_alb",
              "app_role": "wordpress",
              "environment": "development",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "web_hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-0305922eaaf698e8a"
          },
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183504198547:security-group/sg-000f897cff45e4bd0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000f897cff45e4bd0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02c5dc61d603adeda"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "useast1d_wordpress_asg_20201115043816432700000009",
            "name_prefix": "useast1d_wordpress_asg_",
            "owner_id": "183504198547",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "useast1d_wordpress_asg",
              "app_role": "wordpress",
              "environment": "development",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "web_hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-0305922eaaf698e8a"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183504198547:security-group/sg-0ec0341252855fb67",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec0341252855fb67",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-000f897cff45e4bd0"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "useast1d_wordpress_efs_2020111504381811750000000a",
            "name_prefix": "useast1d_wordpress_efs_",
            "owner_id": "183504198547",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "useast1d_wordpress_efs",
              "app_role": "wordpress",
              "environment": "development",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "web_hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-0305922eaaf698e8a"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.asg",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183504198547:security-group/sg-06cf1359db3e383c6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06cf1359db3e383c6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-000f897cff45e4bd0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "useast1d_wordpress_rds_2020111504381811750000000b",
            "name_prefix": "useast1d_wordpress_rds_",
            "owner_id": "183504198547",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "useast1d_wordpress_rds",
              "app_role": "wordpress",
              "environment": "development",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "web_hosting"
            },
            "timeouts": null,
            "vpc_id": "vpc-0305922eaaf698e8a"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.asg",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:183504198547:loadbalancer/app/useast1d-wordpress/78cfddac6225b830",
            "arn_suffix": "app/useast1d-wordpress/78cfddac6225b830",
            "dns_name": "useast1d-wordpress-944101016.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:183504198547:loadbalancer/app/useast1d-wordpress/78cfddac6225b830",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "useast1d-wordpress",
            "security_groups": [
              "sg-02c5dc61d603adeda"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-027434dfd49be42b7"
              },
              {
                "subnet_id": "subnet-064a24ddef61f4c5b"
              },
              {
                "subnet_id": "subnet-0f0204c48063912f4"
              }
            ],
            "subnets": [
              "subnet-027434dfd49be42b7",
              "subnet-064a24ddef61f4c5b",
              "subnet-0f0204c48063912f4"
            ],
            "tags": {
              "Name": "useast1d/wordpress/alb",
              "app_role": "wordpress",
              "environment": "development",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "web_hosting"
            },
            "vpc_id": "vpc-0305922eaaf698e8a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnet_ids.public",
            "data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:183504198547:listener/app/useast1d-wordpress/78cfddac6225b830/52a738b0a57a9a04",
            "certificate_arn": "",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:183504198547:targetgroup/useast1d-wordpress/9ae2e09760a257b7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:183504198547:listener/app/useast1d-wordpress/78cfddac6225b830/52a738b0a57a9a04",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:183504198547:loadbalancer/app/useast1d-wordpress/78cfddac6225b830",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnet_ids.public",
            "data.aws_vpc.this",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:183504198547:targetgroup/useast1d-wordpress/9ae2e09760a257b7",
            "arn_suffix": "targetgroup/useast1d-wordpress/9ae2e09760a257b7",
            "deregistration_delay": 60,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:183504198547:targetgroup/useast1d-wordpress/9ae2e09760a257b7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "useast1d-wordpress",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "useast1d/wordpress/target_group",
              "app_role": "wordpress",
              "environment": "development",
              "lob": "it_operations",
              "namespace": "useast1d",
              "team": "web_hosting"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0305922eaaf698e8a"
          },
          "dependencies": [
            "data.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}